3d view button hiding on mobile was javascript dependant, fixed

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -1315,8 +1315,7 @@ p.tab-content-empty {
   }
 }
 
-html.no-webgl #toolbox a.view3d,
-html.mobile #toolbox a.view3d {
+html.no-webgl #toolbox a.view3d {
   display: none;
 }
 
@@ -2035,6 +2034,10 @@ a.accordion-toggle  {
     &:active {
       opacity: 0.8;
     }
+  }
+
+  #toolbox a.view3d {
+    display: none;
   }
 
   .detail-content {
